@@ -98,4 +98,5 @@ class LinspaceLoopInterface(TaskInterface):
         iterable = np.fromiter((round(value, digit)
                                 for value in raw_values),
                                np.float, len(raw_values))
+        task.write_in_database('loop_values', np.array(iterable))
         task.perform_loop(iterable)
