@@ -11,6 +11,8 @@ Exopy Changelog
 - always evaluate formula even if they contain only alpha characters PR # 132
 - fix unproperly unparented child task when removing a ComplexTask PR # 132
 - identify duplicate measurements in the waiting queue PR # 130 (fvalmorra)
+- add a "loop_values" database entry to LoopTask which contains the list of
+  all values the loop will iterate through PR #168 (rassouly)
 
 
 0.1.0 - 15-02-2018
